--- a/public/signup.html
+++ b/public/signup.html
@@ -24,9 +24,7 @@
         <br>
         <p id = "warningBtn" style="color:red;"></p>
     </form>
-    <form action="/login" method = "GET">
-        <button> Already have account? Login</button>
-    </form>
+    <a style = "text-decoration: none;" href="login.html">Already have an account? Sign in</a>
     <script src = "js/signup.js"></script>
 
 </body>
