--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <form action="/signup" method ="GET">
-        <button>Sign up</button>
-    </form>
-    <form action="/login" method ="GET">
-        <button>Log in</button>
-    </form>
+    <nav>
+        <form id = "form">
+            <button><a style = "text-decoration: none;" href="signup.html"> Sign up </a></button>
+            <button><a style = "text-decoration: none;" href="login.html"> Login </a></button>
+        </form>
+    </nav>
     
 
 </body>
